# Matrix

./: .gitignore  ComRun.sh  MatrixData.txt  README.md  a.out  matrix.cpp  matrix.h  plan.txt
include/: matrix.h
matrix_app/: BashBuild.sh  CMakeLists.txt  CMakeLists1.txt  Makefile
matrix_app/include/: mainwindow.h
matrix_app/src/: .parser.h.kate-swp  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  matrix.cpp  matrix.h  parser.cpp  parser.h
matrix_app/src/resources/: icons.qrc
matrix_app/ui/:  ui_dummy.cpp  CMakeLists.txt
src/: matrix.cpp
